--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,18 @@
-[env:attiny85]
-platform = atmelavr
-board = attiny85
-framework = arduino
-upload_protocol = usbasp
-upload_flags = -Pusb
+; [env:attiny85]
+; platform = atmelavr
+; board = attiny85
+; framework = arduino
+; upload_protocol = usbasp
+; upload_flags = -Pusb
+;
+; src_filter = +<main.cpp>
 
-src_filter = +<main.cpp>
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+lib_deps = CAN_BUS_Shield
+
+;https://github.com/Seeed-Studio/CAN_BUS_Shield
+;https://github.com/reeedstudio/CAN_BUS_Shield.git
