need a MC33290 chip

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,20 @@
 ; src_filter = +<main.cpp>
 
 
+; [env:uno]
+; platform = atmelavr
+; board = uno
+; framework = arduino
+; lib_deps = CAN_BUS_Shield
+
+;https://github.com/Seeed-Studio/CAN_BUS_Shield
+;https://github.com/reeedstudio/CAN_BUS_Shield.git
+
+
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = CAN_BUS_Shield
-
-;https://github.com/Seeed-Studio/CAN_BUS_Shield
-;https://github.com/reeedstudio/CAN_BUS_Shield.git
+lib_deps = AltSoftSerial@1.4
+src_filter = -<main_CAN.cpp> +<main_reader_softserial.cpp>
+; https://github.com/iwanders/OBD9141
