circuit diagrams added

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,5 +23,5 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps = AltSoftSerial@1.4
-src_filter = -<main_CAN.cpp> +<main_reader_softserial.cpp>
+src_filter = -<main_CAN.cpp> +<main_reader_softserial.cpp> -<extras>
 ; https://github.com/iwanders/OBD9141
